--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
 displayName=Loot Logger
 author=TheStonedTurtle
 support=https://github.com/TheStonedTurtle/Loot-Logger
-description=Stores Loot Tracker data locally and adds new side-panel UI
+description=<html>Stores Loot Tracker data locally and adds new side-panel UI</html>
 tags=loot,tracker,logger,drops,boss
 plugins=thestonedturtle.lootlogger.LootLoggerPlugin
